# loadtester-android

./: .dockerignore  .gitignore  BUILD_APK.md  BUILD_SIMPLE.md  Dockerfile  FINAL_SOLUTION.md  KIVY_LAUNCHER_GUIDE.md  QUICK_START.md  README.md  README_APK.md  SOLUTION_SUMMARY.md  android.txt  build_apk.bat  build_apk.sh  build_chaquopy.py  build_docker.ps1  build_instructions.md  build_p4a.py  buildozer.spec  check_build.ps1  entrypoint.sh  install_sdk.sh  load_tester.py  locustfile.py  main.py  pyproject.toml  run.ps1  service.py  setup.ps1
.github/workflows/: build-apk.yml
android_project/: build.gradle  settings.gradle
android_project/app/: build.gradle
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/java/org/loadtester/app/: MainActivity.java
android_project/app/src/main/python/: main.py
android_project/app/src/main/res/layout/: activity_main.xml
android_project/app/src/main/res/values/: strings.xml
loadtester/: __init__.py
p4a_recipes/loadtester/: __init__.py
